--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -82,10 +82,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.10
+        uses: chains-project/dirty-waters-action@v1.11.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
-          project_repo: ${{ github.repository }}
-          latest_commit_sha: ${{ github.sha }}
-          github_event_before: ${{ github.event.before }}
+          gradual_report: true
