--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -19,6 +19,7 @@ jobs:
           allowed-endpoints: >
             api.github.com:443
             github.com:443
+            objects.githubusercontent.com:443
             oss.sonatype.org:443
             maven.artifacts.atlassian.com:443
             packages.atlassian.com:443
@@ -78,6 +79,7 @@ jobs:
           allowed-endpoints: >
             api.github.com:443
             github.com:443
+            objects.githubusercontent.com:443
             oss.sonatype.org:443
             maven.artifacts.atlassian.com:443
             packages.atlassian.com:443
