--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -24,6 +24,7 @@ jobs:
             api.github.com:443
             api.securityscorecards.dev:443
             github.com:443
+            objects.githubusercontent.com:443
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Dependency review
