--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -43,6 +43,7 @@ jobs:
             api.scorecard.dev:443
             fulcio.sigstore.dev:443
             github.com:443
+            objects.githubusercontent.com:443
             oss-fuzz-build-logs.storage.googleapis.com:443
             rekor.sigstore.dev:443
             repo.maven.apache.org:443
