--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,22 +29,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Verify action checksums
-        env:
-          VERSION: v0.5.1
-          CHECKSUM: 57270991fee8c7e0f00f5d27c36f514c1743621f11bd53685c3153477a4929de2851f2fb7d4a3f5b2a68c85203b35759d580a023544665b466a3298047034c64
-          GH_TOKEN: ${{ github.token }}
-          JOB: ${{ github.job }}
-          WORKFLOW: ${{ github.workflow_ref }}
-        run: |
-          # Download the ghasum CLI
-          ARTIFACT="ghasum_linux_amd64.tar.gz"
-          gh release download "${VERSION}" --repo chains-project/ghasum --pattern "${ARTIFACT}"
-          echo "${CHECKSUM}  ${ARTIFACT}" | shasum -a 512 -c -
-          tar -xf "${ARTIFACT}"
-
-          # Verify the action checksums
-          WORKFLOW=$(echo "${WORKFLOW}" | cut -d '@' -f 1 | cut -d '/' -f 3-5)
-          ./ghasum verify -cache /home/runner/work/_actions -no-evict -offline "${WORKFLOW}:${JOB}"
+        uses: ./.github/workflows/ghasum.yml
+        with:
+          job: ${{ github.job }}
+          workflow: ${{ github.workflow_ref }}
 
       - name: Generate action.yml
         run: mvn generate-resources resources:copy-resources -q
