--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,7 +29,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Verify action checksums
-        uses: ./.github/workflows/ghasum.yml
+        uses: ./.github/workflows/ghasum
         with:
           job: ${{ github.job }}
           workflow: ${{ github.workflow_ref }}
