--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -40,18 +40,8 @@ signing:
 deploy:
   maven:
     mavenCentral:
-      release-deloy:
-        active: RELEASE
+      maven-central:
+        active: ALWAYS
         url: https://central.sonatype.com/api/v1/publisher
-        stagingRepositories:
-          - target/staging-deploy
-    nexus2:
-      snapshot-deploy:
-        active: SNAPSHOT
-        snapshotUrl: https://central.sonatype.com/repository/maven-snapshots
-        applyMavenCentralRules: true
-        snapshotSupported: true
-        closeRepository: true
-        releaseRepository: true
         stagingRepositories:
           - target/staging-deploy
