--- a/.github/workflows/ghasum.yml
+++ b/.github/workflows/ghasum.yml
@@ -1,8 +1,6 @@
 name: ghasum
 on:
   pull_request:
-    branches:
-      - renovate/github-**
 
 permissions: read-all
 
@@ -13,6 +11,12 @@ jobs:
     permissions:
       contents: write # To push a commit
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+        with:
+          disable-sudo: true
+          egress-policy: audit
+
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
