--- a/.github/workflows/ghasum.yml
+++ b/.github/workflows/ghasum.yml
@@ -1,8 +1,8 @@
 name: ghasum
 on:
-  push:
+  pull_request:
     branches:
-    - renovate/github-**
+      - renovate/**
 
 permissions: read-all
 
@@ -10,10 +10,19 @@ jobs:
   update:
     name: Update gha.sum
     runs-on: ubuntu-24.04
-    if: ${{ github.actor == 'renovate[bot]' }}
     permissions:
       contents: write # To push a commit
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+        with:
+          disable-sudo: true
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            github.com:443
+            objects.githubusercontent.com:443
+
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
