Add minimum release age of 1d

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,7 @@
   },
   "semanticCommitType": ":arrow_up:",
   "semanticCommits": "enabled",
+  "minimumReleaseAge": "1d",
   "packageRules": [
     {
       "matchUpdateTypes": [
