--- a/.github/actions/ghasum/action.yml
+++ b/.github/actions/ghasum/action.yml
@@ -43,5 +43,5 @@ runs:
 
     - name: Remove ghasum binary
       run: |
-        rm ghasum ghasum_linux_amd64.tar.gz
+        rm -f ghasum ghasum_linux_amd64.tar.gz
       shell: bash
