--- a/.github/workflows/ghasum.yml
+++ b/.github/workflows/ghasum.yml
@@ -26,8 +26,8 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
-          ref: ${{ github.event.client_payload.pull_request.head.ref }}
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
       - name: Update gha.sum
         uses: ./.github/actions/ghasum
